--- a/.github/workflows/python-ci-minimal.yml
+++ b/.github/workflows/python-ci-minimal.yml
@@ -25,11 +25,11 @@ on:
 jobs:
   build:
     strategy:
-      fail-fast: true
+      fail-fast: false
 
       matrix:
         os: [ubuntu-22.04, macos-12]
-        python-version: ['3.8', '3.11']
+        python-version: ['3.11']
         include:
           - os: ubuntu-22.04
             cc: gcc-11
