--- a/.github/workflows/r-ci.yml
+++ b/.github/workflows/r-ci.yml
@@ -11,10 +11,10 @@ on:
       - '!apis/python/**'
       - '!docs/**'
       - '!LICENSE'
-  push:
-    branches:
-      - main
-      - 'release-*'
+  # push:
+  #   branches:
+  #     - main
+  #     - 'release-*'
   workflow_dispatch:
 
 env:
