--- a/.github/workflows/python-ci-full.yml
+++ b/.github/workflows/python-ci-full.yml
@@ -4,10 +4,10 @@ name: TileDB-SOMA Python CI (Full)
 # matrix. Since that's CI-resource-intensive, it runs only for main branch and
 # releases.
 on:
-  push:
-    branches:
-      - main
-      - 'release-*'
+  # push:
+  #   branches:
+  #     - main
+  #     - 'release-*'
   release:
     types: [published]
   # You can also invoke this workflow manually from
