--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,12 +2,12 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
 on:
-  #push:
-  #  # To publish docs from your branch: list the branch name here instead of main.
-  #  branches: [main]
-  #pull_request:
-  #  # To publish docs from your branch: list the branch name here instead of main.
-  #  branches: [main]
+  push:
+   # To publish docs from your branch: list the branch name here instead of main.
+   branches: [main]
+  pull_request:
+   # To publish docs from your branch: list the branch name here instead of main.
+   branches: [main]
   release:
     types: [published]
   schedule:
