--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,16 +2,16 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 
 on:
-  push:
-   # To publish docs from your branch: list the branch name here instead of main.
-   branches: [main]
-  pull_request:
-   # To publish docs from your branch: list the branch name here instead of main.
-   branches: [main]
-  release:
-    types: [published]
-  schedule:
-    - cron: "42 9 * * *"
+  # push:
+  #  # To publish docs from your branch: list the branch name here instead of main.
+  #  branches: [main]
+  # pull_request:
+  #  # To publish docs from your branch: list the branch name here instead of main.
+  #  branches: [main]
+  # release:
+  #   types: [published]
+  # schedule:
+  #   - cron: "42 9 * * *"
   workflow_dispatch:
 
 name: pkgdown
